--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.4.1
 black==21.9b0
 click==8.0.3
+colorama==0.4.6
 Django==3.2.8
+gunicorn==23.0.0
 mypy-extensions==0.4.3
+packaging==24.1
 pathspec==0.9.0
 Pillow==8.4.0
 platformdirs==2.4.0
