--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ black==21.9b0
 click==8.0.3
 colorama==0.4.6
 Django==3.2.8
-gunicorn==23.0.0
+gunicorn==20.1.0
 mypy-extensions==0.4.3
 packaging==24.1
 pathspec==0.9.0
@@ -14,3 +14,4 @@ regex==2021.10.23
 sqlparse==0.4.2
 tomli==1.2.2
 typing-extensions==3.10.0.2
+psycopg2-binary==2.9.3
